# 42-cursus

./: README.md
0_Milestone/libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd_back_bonus.c  ft_lstadd_front_bonus.c  ft_lstclear_bonus.c  ft_lstdelone_bonus.c  ft_lstiter_bonus.c  ft_lstlast_bonus.c  ft_lstmap_bonus.c  ft_lstnew_bonus.c  ft_lstsize_bonus.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  ft_strnstr.c  ft_strrchr.c  (+5 more)
1_Milestone/ft_printf/: Makefile  README.md  ft_printf.c  ft_printf.h  ft_printhexa.c  ft_printnbr.c  ft_printptr.c  ft_printstr.c  ft_printunsigned.c
1_Milestone/get_next_line/: README.md  get_next_line.c  get_next_line.h  get_next_line_utils.c
2_Milestone/A-maze-ing/: .gitignore  LICENSE.md  MANIFEST.in  Makefile  README.md  a_maze_ing.py  mazegen-1.0.0-py3-none-any.whl  pathfinder.py  pyproject.toml
2_Milestone/A-maze-ing/mazegen/: generator.py  maze-generator.md
2_Milestone/Python Modules/Python08/ex1/: pyproject.toml
2_Milestone/Python06/: ft_distillation_1.py  ft_kaboom_0.py  ft_kaboom_1.py
2_Milestone/Python07/: battle.py
2_Milestone/push_swap/: Makefile  README.md  ft_split.c  ft_split_utils.c  mov_push.c  mov_revrotate.c  mov_rotate.c  mov_swap.c  push_swap.c  push_swap.h  push_swap_clear.c  push_swap_isn.c  (+5 more)
(+63 files in other folders)
