[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mazegen"
version = "1.0.0"
description = "A maze generator module"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["mazegen*"]

[tool.setuptools.package-data]
mazegen = ["*.md"]