[tool.poetry]
name = "matrix-analysis"
version = "0.1.0"
description = "analyze and create a simple visualization"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10.12"
pandas = "^2.1.0"
numpy = "^1.25.0"
matplotlib = "^3.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"